# assistant

./: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lcu.rs  lib.rs  shaco.rs
src-tauri/src/lcu/: listener.rs  matchlisthanle.rs
src-tauri/src/shaco/: error.rs  rest.rs  riotgames.pem  ws.rs
src-tauri/src/shaco/model/: ws.rs
src-tauri/src/shaco/utils/: process_info.rs
src/background/: background.ts  gameFlow.ts  index.html
src/background/types/: index.d.ts
src/background/utils/: config.ts  createWindows.ts
src/lcu/: aboutMatch.ts  aboutSummoner.ts  aboutTeammate.ts  abuoutRank.ts  baseMatch.ts  index.ts  matchDetails.ts  utils.ts
src/lcu/types/: MatchLcuTypes.d.ts  QueryTypes.d.ts  RuneTypes.d.ts  SummonerTypes.d.ts  TeammateTypes.d.ts
src/main/: index.html  index.vue  main.ts  main.vue  style.css
src/main/components/: dashboard.vue  navigation.vue  searchChamp.vue  setting.vue  sponsor.vue  summonerMasteryChamp.vue
src/main/router/: index.ts
src/main/store/: rune.ts
src/main/utils/: queryRune.ts  rankUtils.ts  request.ts  theme.ts
src/queryMatch/: index.html  main.ts  main.vue  queryMatch.vue  style.css
src/queryMatch/components/: loadingAnime.vue  matchAnalysis.vue  matchContent.vue  matchContentHeader.vue  matchDetails.vue  matchDrawer.vue  matchErr.vue  matchList.vue  matchMain.vue  matchSumDetails.vue  queryHeader.vue  summonerInfoView.vue
src/resources/: areaList.ts  champList.ts  otherList.ts
(+8 files in other folders)
