[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2.3.1"
sysinfo = "0.37.2"
base64 = "0.22.1"
tokio = { version = "1.48.0", features = ["full"] }
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json"] }
futures-util = "0.3.31"
tauri-plugin-http = "2.5.4"
